removed alerts and added a paragragh

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>BMI Calculator</h1>
+      <p>What is your Body Mass Index?</p>
     <script src="js/scripts.js"></script>
   </body>
 
